fixing alignment of img

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ Version: 1.0
 
 img {
 	max-width: 100%;
+	margin:auto;
 }
 
 h1 {
